src/test/deca/context/invalid/intermediaire2/mots_reserves/08null.deca
// Description:
// Test du mettre le mot réservé null, en nom de variable.
//
// Resultats:
//  08null.deca:10:8:
//
// Historique:
//    crée le 17/06/2022
{
    int null;
}